--- a/services/services.css
+++ b/services/services.css
@@ -378,3 +378,41 @@ body {
     font-size: 25px;
   }
 }
+
+
+
+
+
+/* =========================
+   Snowfall Effect  
+========================= */
+#snow {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: 9999;
+}
+.snowflake {
+  position: absolute;
+  top: -10px;
+  background: rgb(255, 255, 255);
+  border-radius: 50%;
+  opacity: 0.8;
+  pointer-events: none;
+  animation-name: fall;
+  animation-timing-function: linear;
+ 
+}
+@keyframes fall {
+  0% {
+    transform: translateY(0) rotate(0deg);
+    opacity: 0.8;
+  }
+  100% {
+    transform: translateY(100vh) rotate(360deg);
+    opacity: 0.3;
+  }
+}
