--- a/home.css
+++ b/home.css
@@ -73,6 +73,15 @@ body {
 .hero-content h1 { font-size: 2.5rem; margin-bottom: 20px; }
 .hero-content p { font-size: 1.2rem; margin-bottom: 30px; }
 
+
+.hero-buttons {
+   display: flex;
+    align-items: center;
+
+    
+    
+
+}  
 .hero-buttons a {
   padding: 15px 25px;
   margin-right: 15px;
